--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "namastereact",
   "version": "1.0.0",
   "description": "",
-  "main": "App.js",
   "scripts": {
     "test": "jest"
   },
@@ -20,6 +19,11 @@
   },
   "homepage": "https://github.com/teja7777/NamasteReact#readme",
   "devDependencies": {
-    "parcel": "^2.12.0"
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
